--- a/packages/core/bin/config/testnet/.env
+++ b/packages/core/bin/config/testnet/.env
@@ -1,3 +1,4 @@
+CORE_ENV=test
 CORE_LOG_LEVEL=debug
 CORE_LOG_LEVEL_FILE=trace
 
@@ -5,16 +6,16 @@ CORE_DB_HOST=localhost
 CORE_DB_PORT=5432
 
 CORE_P2P_HOST=0.0.0.0
-CORE_P2P_PORT=4000
+CORE_P2P_PORT=4700
 
 CORE_WEBHOOKS_HOST=0.0.0.0
-CORE_WEBHOOKS_PORT=4004
+CORE_WEBHOOKS_PORT=4704
 
 CORE_EXCHANGE_JSON_RPC_HOST=0.0.0.0
 CORE_EXCHANGE_JSON_RPC_PORT=8080
 
 CORE_API_HOST=0.0.0.0
-CORE_API_PORT=4003
+CORE_API_PORT=4703
 
 CORE_WALLET_API_HOST=0.0.0.0
 CORE_WALLET_API_PORT=4040
