--- a/docker/production/devnet/docker-compose.yml
+++ b/docker/production/devnet/docker-compose.yml
@@ -2,46 +2,62 @@ version: '2'
 services:
   postgres:
     image: "postgres:alpine"
-    container_name: postgres-devnet
+    container_name: postgres-hydra
     restart: always
+    ports:
+      - '5432:5432'
     volumes:
       - 'postgres:/var/lib/postgresql/data'
     networks:
       - core 
     environment:
-     POSTGRES_PASSWORD: password
-     POSTGRES_DB: core_devnet
-     POSTGRES_USER: node
-
+      POSTGRES_DB: hydra_devnet
+      POSTGRES_USER: hydra
+      POSTGRES_PASSWORD: password
   core:
-    image: arkecosystem/core:devnet
-    container_name: core-devnet
+    image: internetofpeople/hydra-core:2.5.14
+    container_name: hydra-core
     restart: always
+    command: devnet ${MODE} ${FORGING_MODE}
     ports:
-     - "4002:4002"
-     - "4003:4003"
-     - "4040:4040"
-     - "127.0.0.1:4004:4004"
-     - "127.0.0.1:4005:4005"
-     - "127.0.0.1:8080:8080" 
+      # P2P
+      - '4702:4702'
+      # API
+      - '4703:4703'
+      # WEBHOOK
+      - '4704:4704'
+      # API WALLET
+      - '4040:4040'
     cap_add:
       - SYS_NICE
       - SYS_RESOURCE
       - SYS_TIME
     volumes:
-     - ~/.config/ark-core:/home/node/.config/ark-core
-     - ~/.local/share/ark-core:/home/node/.local/share/ark-core
-     - ~/.local/state/ark-core:/home/node/.local/state/ark-core
-     - /etc/localtime:/etc/localtime:ro
-     - ./enc:/run/secrets
+      - ./mountpoints/config_overwrite:/root/config_overwrite # overwrite core's config
+      - ./mountpoints/sqlite:/root/.local/share/hydra-core # sqlite db
+      - ./mountpoints/logs:/root/.local/state/hydra-core # logs
+      - ./mountpoints/logs_pm2:/root/.pm2/logs # pm2 logs
+      - /etc/localtime:/etc/localtime:ro
     networks:
-      - core 
-    env_file: ./devnet.env
+      - core
     tty: true
     links:
      - postgres
     depends_on:
       - postgres
+  explorer:
+    image: internetofpeople/hydra-explorer:devnet
+    container_name: hydra-explorer
+    restart: always
+    ports:
+      - '80:4200'
+    networks:
+      - core
+    links:
+      - core
+    depends_on:
+      - postgres
+      - core
 volumes:
   postgres:
   core:
