Making morpheus part of hydra-core

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     },
     "workspaces": [
         "packages/*",
-        "plugins/*"
+        "plugins/*",
+        "morpheus/packages/*"
     ],
     "husky": {
         "hooks": {
