--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
     "lerna": "3.5.0",
     "npmClient": "yarn",
-    "packages": ["packages/*", "plugins/*"],
+    "packages": ["packages/*", "plugins/*", "morpheus/packages/*"],
     "useWorkspaces": true,
     "version": "2.6.10"
 }
