Making IoP DAC 2.0.5 part of hydra-core

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,8 @@
     "npmClient": "yarn",
     "packages": [
         "packages/*",
-        "plugins/*"
+        "plugins/*",
+        "morpheus/packages/*"
     ],
     "useWorkspaces": true,
     "version": "2.7.24"
