--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:12-alpine
+FROM node:12-buster
 
 COPY ./ /root/core-hydra
 
-RUN apk add --update git python make g++ libjemalloc-dev
+RUN apt-get update
+RUN apt-get install -y git python make g++ libjemalloc-dev
 
 RUN cd ~/core-hydra && yarn setup
 
-COPY docker/production/docker-entrypoint.sh /usr/local/bin/
+COPY docker/docker-entrypoint.sh /usr/local/bin/
 RUN ln -s usr/local/bin/docker-entrypoint.sh / # backwards compat
 
 ENTRYPOINT ["docker-entrypoint.sh"]
