Update rate limiter config for APIs

--- a/packages/core/bin/config/testnet/.env
+++ b/packages/core/bin/config/testnet/.env
@@ -19,3 +19,6 @@ CORE_API_PORT=4703
 
 CORE_WALLET_API_HOST=0.0.0.0
 CORE_WALLET_API_PORT=4040
+
+CORE_API_RATE_LIMIT=true
+CORE_API_RATE_LIMIT_USER_LIMIT=1000
