--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "@types/jest": "^24.0.18",
         "@types/js-yaml": "^3.12.1",
         "@types/nock": "^11.1.0",
-        "@types/node": "^12.7.12",
+        "@types/node": "12.12.14",
         "@types/prettier": "^1.18.3",
         "@types/pretty-ms": "^5.0.1",
         "@types/prompts": "^2.4.0",
@@ -88,7 +88,7 @@
         "ts-jest": "^25.0.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.7.2",
+        "typescript": "3.7.2",
         "typesync": "^0.6.1",
         "uuid": "^3.3.3"
     },
