--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,7 @@
     "npmClient": "yarn",
     "packages": [
         "packages/*",
-        "plugins/*",
-        "morpheus/packages/*"
+        "plugins/*"
     ],
     "useWorkspaces": true,
     "version": "2.7.24"
