Updating docker files and readmes under docker dir

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:12-buster
 
+ARG USE_DEV_NPM=
 COPY ./ /root/core-hydra
 
 RUN apt-get update
 RUN apt-get install -y git python make g++ libjemalloc-dev
 
+RUN [ "$USE_DEV_NPM" = "yes" ] && yarn config set registry https://npm.iop.technology
 RUN cd ~/core-hydra && yarn setup
 
 COPY docker/docker-entrypoint.sh /usr/local/bin/
