--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ COPY ./ /root/core-hydra
 RUN apt-get update
 RUN apt-get install -y git python make g++ libjemalloc-dev
 
-RUN [ "$USE_DEV_NPM" = "yes" ] && yarn config set registry https://npm.iop.technology
+RUN [ "$USE_DEV_NPM" = "yes" ] && yarn config set registry https://npm.iop.technology || /bin/true
 RUN cd ~/core-hydra && yarn setup
 
 COPY docker/docker-entrypoint.sh /usr/local/bin/
